working on class dev

--- a/inductive-python/10_namespace.ipynb
+++ b/inductive-python/10_namespace.ipynb
@@ -32,11 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'z' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-0a08d1e4f346>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'z' is not defined"
+     ]
+    }
+   ],
    "source": [
     "print(z)"
    ]
@@ -71,11 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "z = 7\n",
     "print(z)"
@@ -111,11 +131,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'In': ['',\n",
+       "  'print(z)',\n",
+       "  'z = 7\\nprint(z)',\n",
+       "  'locals()',\n",
+       "  \"get_ipython().magic('whos')\",\n",
+       "  \"get_ipython().magic('who_ls')\",\n",
+       "  \"get_ipython().magic('whos')\",\n",
+       "  \"get_ipython().magic('who')\",\n",
+       "  'locals()'],\n",
+       " 'Out': {3: {...}, 5: ['z']},\n",
+       " '_': ['z'],\n",
+       " '_3': {...},\n",
+       " '_5': ['z'],\n",
+       " '__': {...},\n",
+       " '___': '',\n",
+       " '__builtin__': <module 'builtins' (built-in)>,\n",
+       " '__builtins__': <module 'builtins' (built-in)>,\n",
+       " '__doc__': 'Automatically created module for IPython interactive environment',\n",
+       " '__loader__': None,\n",
+       " '__name__': '__main__',\n",
+       " '__package__': None,\n",
+       " '__spec__': None,\n",
+       " '_dh': ['/home/harmsm/work/teaching/ch510_computing/pythonic-science/inductive-python'],\n",
+       " '_i': '%who',\n",
+       " '_i1': 'print(z)',\n",
+       " '_i2': 'z = 7\\nprint(z)',\n",
+       " '_i3': 'locals()',\n",
+       " '_i4': '%whos',\n",
+       " '_i5': '%who_ls',\n",
+       " '_i6': '%whos',\n",
+       " '_i7': '%who',\n",
+       " '_i8': 'locals()',\n",
+       " '_ih': ['',\n",
+       "  'print(z)',\n",
+       "  'z = 7\\nprint(z)',\n",
+       "  'locals()',\n",
+       "  \"get_ipython().magic('whos')\",\n",
+       "  \"get_ipython().magic('who_ls')\",\n",
+       "  \"get_ipython().magic('whos')\",\n",
+       "  \"get_ipython().magic('who')\",\n",
+       "  'locals()'],\n",
+       " '_ii': '%whos',\n",
+       " '_iii': '%who_ls',\n",
+       " '_oh': {3: {...}, 5: ['z']},\n",
+       " '_sh': <module 'IPython.core.shadowns' from '/usr/local/lib/python3.5/dist-packages/IPython/core/shadowns.py'>,\n",
+       " 'exit': <IPython.core.autocall.ZMQExitAutocall at 0x7f62156eafd0>,\n",
+       " 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x7f621aee32b0>>,\n",
+       " 'quit': <IPython.core.autocall.ZMQExitAutocall at 0x7f62156eafd0>,\n",
+       " 'z': 7}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "locals()"
    ]
