--- a/inductive-python/01_python-as-a-calculator.ipynb
+++ b/inductive-python/01_python-as-a-calculator.ipynb
@@ -2,57 +2,51 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# python behaves like a calculator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "25"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "5*5"
+    "8*8"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### It does order of operations etc, just like a calculator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.4\n",
-      "5.2\n"
-     ]
+    "scrolled": false,
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "print((5+5)/25)\n",
     "print(5 + 5/25)"
@@ -60,7 +54,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### Most of the notation is intuitive. \n",
     "\n",
@@ -71,55 +69,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "361.0"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "(5*5 + 4/2 - 8)**2"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### To get access to more math, you need to `import math`.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3628800\n",
-      "3.1622776601683795\n",
-      "1.2246467991473532e-16\n",
-      "-0.8390715290764524\n",
-      "22026.465794806718\n",
-      "2.302585092994046\n",
-      "1.0\n"
-     ]
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import math\n",
     "\n",
@@ -134,7 +117,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "If you want to see what the `math` module has to offer, type `math.` and then hit `TAB`.  This will make a dropdown that shows the possibilities.  \n",
     "\n",
@@ -145,32 +132,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Help on built-in function factorial in module math:\n",
-      "\n",
-      "factorial(...)\n",
-      "    factorial(x) -> Integral\n",
-      "    \n",
-      "    Find x!. Raise a ValueError if x is negative or non-integral.\n",
-      "\n"
-     ]
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
+   "source": [
+    "math."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
    "source": [
     "help(math.factorial)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Variables\n",
     "#### You can use variables to store values"
@@ -178,19 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "25\n"
-     ]
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "x = 5*5\n",
     "print(x)"
@@ -198,25 +187,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "#### But storing stuff only works one way.  Try to run the following cell:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "can't assign to operator (<ipython-input-37-77e6854e6196>, line 1)",
+     "evalue": "can't assign to operator (<ipython-input-1-77e6854e6196>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-37-77e6854e6196>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    5*5 = x\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-77e6854e6196>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    5*5 = x\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't assign to operator\n"
      ]
     }
    ],
@@ -226,23 +222,34 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "The reason it doesn't work is that the `=` sign means: store the output of the stuff on the **right** in the variable on the **left**.  It's nonsensical to try to store anything in `5*5`, so the command fails."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "#### All the stuff on the right is done first, followed by assigning the variable. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
    },
    "outputs": [
     {
@@ -261,14 +268,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "In this program, `x` is set to 5 on the first line.  On the second line, `x` is multiplied by `5` (giving 25), which is then assigned back to `x`.  Thus, the program prints `25` when run."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Try it out\n",
     "\n",
@@ -283,7 +298,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "outputs": [],
    "source": [
@@ -294,13 +312,18 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Is Stirling's approximation better for small or large values of $n$?"
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
